--- a/spring-vault-rest-api-client/pom.xml
+++ b/spring-vault-rest-api-client/pom.xml
@@ -12,6 +12,7 @@
         <jackson.version>2.13.1</jackson.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <httpcore.version>4.4.16</httpcore.version>
         <httpclient.version>4.5.13</httpclient.version>
         <spring-retry.version>1.3.4</spring-retry.version>
         <spring.web.version>5.3.14</spring.web.version>
@@ -54,6 +55,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>${httpcore.version}</version>
         </dependency>
 
         <dependency>
